<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">4.0取流播放Demo</string>
    <string name="action_settings">Settings</string>

    <string name="username_hint">Input username</string>
    <string name="passwd_hint">Input password</string>
    <string name="verifCode_hint">verifCode</string>
    <string name="login_btn_txt">Login</string>
    <string name="auto_login_chk_txt">Auto Login</string>
    <string name="fetch_linelist_failed">Fetching line list failed.</string>
    <string name="login_failed">Login failed,%s</string>
    <string name="fetch_reslist_failed">Fetching resource list failed,%s</string>
    <string name="server_setting">Server Setting</string>
    <string name="server_setting_hint">Input a server address</string>
    <string name="save">Save</string>
    <string name="serveraddr_empty_tip">Server is empty !</string>
    <string name="username_empty_tip">UserName is empty !</string>
    <string name="password_empty_tip">Password is empty !</string>
    <string name="verifCode_empty_tip">VerifCode is empty !</string>
    <string name="macaddr_empty_tip">MacAddress is empty !</string>
    <string name="line_unavailable">No available line,please click button to fetch line list!</string>
    <string name="login_user_has_lock">用户被锁定，请稍后再试！.</string>
    <string name="login_user_password_error">用户名或密码不正确</string>
    <string name="login_verifcode_err">验证码错误</string>
    <string name="login_verifcode_invalide">验证码无效</string>
    <string name="verifcode_refresh_fail">验证码刷新失败</string>

    <string name="getline_suc_tip">Getting line success!</string>
    <string name="getline_fail_tip">Getting line failed,%s</string>
    <string name="login_suc_tip">Login success!</string>
    <string name="fetchline_process_tip">Fetching line list...</string>
    <string name="login_process_tip">Logging in process...</string>
    <string name="no_data_tip">No data.</string>
    <string name="fetch_resource_suc">Fetching resource success!</string>

    <string name="cloud_ctrl">Cloud Platform Control </string>
    <string name="start_ctrl">启动云台控制 </string>
    <string name="stop_ctrl">停止云台控制 </string>
    <string name="stream_choose">Choose a stream</string>
    <string name="fetch_line">Fetch line</string>
    <string name="demo_version">Version:Build2016-07-28</string>
    
    <!-- 消息界面 -->
    <string name="bullentin_title">消息</string>
    <string name="bullentin_loading">消息加载中,请稍后...</string>
    <string name="platform_bullentin">公告消息</string>
    <string name="system_bullentin">系统消息</string>
    <string name="dispatch_bullentin">调度消息</string>
    <string name="no_bullentin_text">无消息记录</string>
    <string name="search_title_text">搜索</string>
    <string name="get_bullentin_list_detail">获取消息列表失败，请点击我重新获取</string>
    <string name="get_bullentin_list_detail_toast">获取消息列表失败</string>
    <string name="get_platform_bullentin_detail_list">获取平台消息详情列表失败，请点击我重新获取</string>
    <string name="get_platform_bullentin_detail_list_toast">获取平台消息详情列表失败</string>
    <string name="get_system_bullentin_detail_list">获取系统消息详情列表失败，请点击我重新获取</string>
    <string name="get_system_bullentin_detail_list_toast">获取系统消息详情列表失败</string>
    <string name="delete_bullent_fail_text_toast">删除消息失败</string>
    <string name="refesh_bullentin_fail_text">刷新失败</string>
    <string name="more_bullentin_fail_text">获取更多消息失败</string>
    <string name="more_bullentin_no_more">没有更多了</string>
    <string name="network_exception">网络异常，请检查您的网络</string>
    <string name="bullentin_list_load_fail">获取消息列表失败，请点击重新获取</string>
    <string name="alarm_bulletin_list_load_fail">获取报警消息详情失败，请点击重新获取</string>
    <string name="alarm_bulletin_list_load_fail_toast">获取报警消息详情失败</string>
    <string name="yesterday">昨天</string>
    <string name="today">今天</string>
    <!-- "M月d日 HH:mm"; -->
    <string name="mmdd">M月d日</string>
    <string name="mmddhhmm">M月D日 HH:MM</string>
    <string name="hhmm">HH:MM</string>
    <string name="delete_bullent_txt">删除消息</string>
    <string name="certain_delete_bullentin_txt">确定要删除消息？</string>
    <string name="bullentin_title_text">请前往事发地点参加湖南睡啦</string>
    <!-- 报警消息 -->
    <string name="alarm_bullentin_title">查看报警</string>
    <string name="notice_title_text"></string>
    <string name="get_location_fail">获取地理位置信息失败</string>
    <string name="bulletin_real_play_text">查看预览</string>
    <string name="bulletin_play_back_text">查看录像</string>
    <string name="bulletin_camera_detail_text">监控点详情</string>
    <string name="alarm_bulletin_no_limit_real_play">当前账户没有预览权限</string>
    <string name="alarm_bulletin_no_limit_play_back">当前账户没有回放权限</string>
    <string name="time_header">发表时间：</string>
    <string name="time_happans_header">事发时间：</string>
    <string name="location_title_text">事发地点：</string>
    <string name="describe_title_text">事件描述：</string>

    <!-- 条形码、二维码扫描 -->
    <string name="scan_waiting_txt">正在查询，请稍候...</string>
    <string name="scan_cue_txt">请将二维码或序列号条码置于矩形框内，系统将自动识别</string>
    <string name="describtion" />
    <string name="scan_result_txt">扫描结果</string>
    <string name="scan_result_error">没查找到您要的东西</string>

    <!-- 演示视频 -->
    <string name="demo_video_text">演示视频</string>
    <string name="demo_camera_loading_text">列表加载中，请稍等...</string>
    <string name="demo_live_text">查看视频</string>
    <string name="live_refrsh">正在重连，请稍等...</string>
    <string name="live_starting">正在连接，请稍等...</string>
    <string name="live_start_fail">开启预览失败，请手动刷新连接</string>
    <!-- 智能引导页面 -->
    <string name="capture_text">抓图</string>
    <string name="record_text">录像</string>
    <string name="ptz_text">云台控制</string>
    <string name="quality_text">画面质量</string>
    <string name="stop_text">停止预览</string>
    <!-- 网络请求错误 -->
    <string name="request_err_timeout">,请求超时</string>
    <string name="endstr_errorCode">,错误码</string>

    <!-- 对讲 -->
    <string name="start_talk_fail">开启对讲失败</string>
    <string name="stop_talk_fail">关闭对讲失败</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_baidu_map">BaiduMapActivity</string>
    <string name="title_activity_hik_gis">HikGISActivity</string>
    <!-- sessionId超期提示 -->
    <string name="session_id_error">登录已失效，请重新登录</string>
    
    <string name="playback_not_allot_record">该监控点没有配置录像计划</string>
    
    <string name="playback_title_name">远程回放</string>
    <string name="playback_search">录像搜索</string>
    
    <string name="playback_capture_failed">抓拍失败</string>
    <string name="playback_record_failed">录像失败</string>
    <string name="playback_SDCard_unusable">SDCard不可用</string>
    <string name="playback_SDCard_no_enough_capacity">SDCard没有足够的空间</string>
    <string name="playback_start_failed">开始播放失败</string>
    <string name="playback_start_failed_errorcode">开始播放失败，错误码(</string>
    <string name="playback_no_record_file">查询成功，没有录像文件</string>
    <string name="playback_query_record_file_failed">查询录像文件失败。</string>
    <string name="playback_query_record_file_failed_errorcode">查询录像文件失败, 错误码(</string>
    <string name="playback_play_finished">录像播放结束</string>
    <string name="playback_resume_failed">重启播放失败</string>
    <string name="playback_resume_failed_errorcode">重启播放失败，错误码(</string>
    <string name="playback_pause_failed">暂停播放结束</string>
    <string name="playback_pause_failed_errorcode">暂停播放失败，错误码(</string>
    <string name="playback_location_failed">播放失败</string>
    <string name="playback_location_failed_errorcode">播放失败， 错误码(</string>
    <string name="playback_capture_failed_errorcode">抓拍失败，错误码(</string>
    <string name="playback_record_failed_errorcode">录像失败，错误码(</string>
    <string name="playback_audio_failed">音频开始失败</string>
    <string name="playback_audio_failed_errorcode">音频开始失败，错误码(</string>
	<string name="playback_search_date">回放日期</string>
	<string name="playback_storge_mode">存储介质</string>
	<string name="playback_storge_mode_other">CVR</string>
	<string name="playback_storge_mode_cloud">云存储</string>
	<string name="playback_no_segment">录像回放失败，该时间段无录像</string>
	<string name="playback_quit_alertTip">录像剪辑中，是否停止？</string>

</resources>
